# Marshall-Intrinsic-Units

./: .gitignore  CITATION.cff  README.md  figures.ipynb  pyphi_config.yml  pyproject.toml  requirements.txt  run_cg_micro.py  run_sfn_micro.py  setup.py
marshall2024/: __init__.py  marshall2024.py
marshall_intrinsic_units/: __init__.py  marshall_intrinsic_units.py
results/bbx_macro/: summary.txt
results/sfs_micro/: summary.txt
scripts/: run_bbx_macro.py  run_bbx_micro.py  run_bu_micro.py  run_cg_macro.py  run_cg_micro.py  run_min_macro.py  run_min_micro.py  run_sfn_micro.py  run_sfnn_micro.py  run_sfs_micro.py
